# AprilONeil

./: .gitmodules  CMakeLists.txt  README.md  example_stdout.txt  monitor_element_vs_source1.xlsx
RootAgentAPI/: CMakeLists.txt  client.c  main.cpp  root_api.cpp  root_api.h  server.c
include/Selene/: CMakeLists.txt
include/json11/: json11.pc.in
lua/: cyberlib.lua
lua/actions/: example_action.lua
lua/conditions/: example_condition.lua  memfree_toolow.lua
lua/data_sources/parsers/: maps_pid.lua  meminfo.lua  status_pid.lua  vmstat.lua
lua/data_sources/parsers/proc/: meminfo.lua  mounts.lua
lua/parsers/: example_parser.lua  meminfo.lua
lua/rules/: memfree_too_low.lua  too_many_free_pages.lua  write_permissions_in_maps.lua
parsers/: main.py  output_example.txt
parsers/lua/: cyberlib.lua
parsers/lua/data_sources/parsers/: example_parser.lua  main_parser.lua  progress.txt  python_parser_wrapper.lua
parsers/lua/data_sources/parsers/proc/: meminfo.lua  mounts.lua  stat.lua  vmstat.lua
parsers/lua/data_sources/parsers/proc/pid/: fd.lua  fd_DEPRECATED.lua  maps.lua  ns.lua  ns_DEPRECATED.lua  stat.lua  status.lua  task.lua
parsers/lua/rules/: bash_root_instances.lua  exe_constant_uid_gid_rule.lua  exe_instances_rule.lua  exe_instances_threads_uid_gid_rss_rule.lua  exe_maximum_rss_memory_rule.lua  exe_num_of_threads_rule.lua  exes_whitelist_rule.lua  memfree_too_low.lua  mounts_test.lua  pid_constant_uid_gid_rule.lua  pid_maximum_rss_memory_rule.lua  pid_num_of_threads_rule.lua  system_cpu_usage_rule.lua  system_ram_and_cpu_usage_rule.lua  system_ram_usage_rule.lua  system_rule_cpu_and_ram_usage.lua  too_many_threads_for_process.lua
parsers/pp/: pp.lua  pp.md  pp_test.lua
root_api/: rootapi.h
src/: DataAccess.cpp  DataAccess.h  DataEntry.cpp  DataEntry.h  Engine.cpp  Engine.h  LuaWrapper.cpp  LuaWrapper.h  data_access.cpp  data_access.h  data_entry.cpp  data_entry.h  engine.cpp  engine.h  main.cpp  types.h  utils.cpp  utils.h
src/actions/: Action.cpp  Action.h  ActionWrapper.cpp  ActionWrapper.h  IAction.h  LogCurrentParse.cpp  LogCurrentParse.h  action.cpp
src/conditions/: ConditionWrapper.cpp  ConditionWrapper.h  ICondition.h  IsNoChange.cpp  IsNoChange.h
src/parsers/: ParserWrapper.cpp  ParserWrapper.h
src/rules/: Rule.h
src/tracing/: colormod.h  demo.cpp  trace_entry.cpp  trace_entry.h  trace_log.h
src/wrappers/: LuaWrapper.cpp  LuaWrapper.h  lua_wrapper.cpp  lua_wrapper.h
src/wrappers/actions/: ActionWrapper.cpp  ActionWrapper.h
src/wrappers/conditions/: ConditionWrapper.cpp  ConditionWrapper.h
src/wrappers/data_sources/: DataSourceInterface.h  data_source_interface.h
src/wrappers/data_sources/parsers/: ParserWrapper.cpp  ParserWrapper.h  parser_wrapper.cpp  parser_wrapper.h
src/wrappers/parsers/: ParserWrapper.cpp  ParserWrapper.h
src/wrappers/rules/: Rule.cpp  Rule.h  RuleWrapper.cpp  RuleWrapper.h  rule_wrapper.cpp  rule_wrapper.h
